fix message spacing

--- a/src/SendButton/SendButton.scss
+++ b/src/SendButton/SendButton.scss
@@ -31,6 +31,7 @@
   display: flex;
   .send {
     @extend %send-button;
+    cursor: pointer;
   }
   .send:disabled {
     @extend %send-button;
